Added errors for executions
