# execode-backend/docs/execode/swagger.json
@@ -121,6 +121,12 @@
         "api.ExecuteResponse": {
             "type": "object",
             "properties": {
+                "errors": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/api.pistonErrorResponse"
+                    }
+                },
                 "run": {
                     "type": "array",
                     "items": {
@@ -154,6 +160,17 @@
                 }
             }
         },
+        "api.pistonErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status_code": {
+                    "type": "integer"
+                }
+            }
+        },
         "main.healthCheck.response": {
             "type": "object",
             "properties": {
@@ -172,7 +189,7 @@
                     "type": "string"
                 },
                 "signal": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "stderr": {
                     "type": "string"
